--- a/breckFest/breckFest.csproj
+++ b/breckFest/breckFest.csproj
@@ -65,6 +65,7 @@
     <Compile Include="PNG.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Texture.cs" />
     <Compile Include="TGA.cs" />
     <Compile Include="TIF.cs" />
   </ItemGroup>
